# matrix-social-credits

./: Cargo.toml  Dockerfile  Dockerfile-arm  Dockerfile-test  README.md  docker-compose.yml
.github/workflows/: codeberg-mirror.yml
src/: data.rs  event_handler.rs  event_handlers.rs  main.rs
src/data/: emoji.rs  event.rs  mod.rs  user.rs  user_reaction.rs  user_room_data.rs  user_social_credit.rs
src/utils/: autojoin.rs  emoji_util.rs  mod.rs  user_util.rs
