[package]
name = "matrix-social-credits"
version = "0.0.7-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = "0.6.2"
anyhow = "1.0.75"
rusqlite = "0.29.0"
tokio = { version = "1", features = ["full"] }
regex = "1.9.5"  # Required for asynchronous programming
